infrastructure/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pauwels-labs
  namespace: istio-ingress
spec:
  selector:
    app: istio-gateway
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - network.pauwelslabs.com
    - github-webhook.cd.pauwelslabs.com
    - secrets.pauwelslabs.com
    - identity.pauwelslabs.com
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https-kiali
      protocol: HTTPS
    hosts:
    - "kiali/network.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-network-pauwels-labs
  - port:
      number: 443
      name: https-github-webhook
      protocol: HTTPS
    hosts:
    - "flux-system/github-webhook.cd.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-github-webhook-cd-pauwels-labs
  - port:
      number: 443
      name: https-secrets
      protocol: HTTPS
    hosts:
    - "vault/secrets.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-secrets-pauwels-labs
  - port:
      number: 443
      name: https-identity
      protocol: HTTPS
    hosts:
    - "keycloak/identity.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-identity-pauwels-labs
