infrastructure/istio/authorizationpolicy.yaml
kind: AuthorizationPolicy
apiVersion: security.istio.io/v1beta1
metadata:
  name: ext-authz-oauth2-proxy
  namespace: keycloak
spec:
  selector:
    matchLabels:
      run: echo
  action: CUSTOM
  provider:
    name: oauth2-proxy
  rules:
  - to:
    - operation:
        hosts: ["echo.pauwelslabs.com"]
